@@ -8,6 +8,10 @@
  * Fixed a bug in which toggling 'Show labels' in the track menu did
    not re-layout the track on the first toggling.
 
+ * Make columns in the faceted track selector initially each be an
+   equal percentage of the total width of the grid.  Thanks to Steffi
+   Geisen for pointing this out.
+
 1.7.4     2012-12-06 23:08:22 America/New_York
 
  * Fixed a bug preventing loading of JBrowse in some browsers.  Thanks
